infrastructure/k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-demo-app
  namespace: devsu-demo-prod
  labels:
    app: devsu-demo
    environment: production
    component: app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: devsu-demo
      environment: production
  template:
    metadata:
      labels:
        app: devsu-demo
        environment: production
        component: app
    spec:
      volumes:
      - name: sqlite-data
        persistentVolumeClaim:
          claimName: devsu-demo-sqlite-pvc
      containers:
      - name: devsu-demo-app
        image: khakharis/devsu-demo:latest
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - name: sqlite-data
          mountPath: /app/data
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
