infrastructure/k8s/prod/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: devsu-demo-prod
  labels:
    app: mariadb
    environment: production
    component: database
spec:
  selector:
    app: mariadb
    environment: production
  ports:
  - port: 3306
    targetPort: 3306
    name: mysql
  type: ClusterIP
