infrastructure/k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-demo-service
  namespace: devsu-demo-prod
  labels:
    app: devsu-demo
    environment: production
    component: service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: devsu-demo
    environment: production
