infrastructure/k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-demo-ingress
  namespace: devsu-demo-prod
  labels:
    app: devsu-demo
    environment: production
    component: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: devsu-demo-prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsu-demo-service
            port:
              number: 80
